--- a/110305075_Lab.html
+++ b/110305075_Lab.html
@@ -3,7 +3,7 @@
     <body>
         <form  method="post">
 
-            <table border="1" style="width:100%">
+            <table border="1">
                 <caption>
                     <th colspan = "3">About--110305075</th>
                 </caption>
@@ -65,7 +65,7 @@
                     <p><th colspan="2">
                         <div align = "left">
                             <input type="checkbox" name="hobby" value="Swimming">Swimming
-                            <intput type="checkbox" name="hobby" value="Volleyball">Volleyball
+                            <input type="checkbox" name="hobby" value="Volleyball">Volleyball
                             <input type="checkbox" name="hobby" value="Movie">Movie
                             <input type="checkbox" name="hobby" value="Game">Game
                             <input type="checkbox" name="hobby" value="sleep">sleep
